# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.sqlx/: query-9aa416ec2c354eb0c4edec9abc5afc4d56e0876e95d5b085684364d4b48f0c24.json  query-b75d155ce1e82155f60b48aa546c4f87db85d01a7a9979fb64617c64cc6c826e.json
configuration/: base.yaml  production.yaml
migrations/: 20240210211741_create_subscriptions_table.sql  20240217192151_make_status_not_null_in_subscriptions.sql  20240221113426_rename_password_column.sql  20240221130913_add_salt_to_users.sql  20240221134109_remove_salt_from_users.sql  20240306205308_seed_user.sql
scripts/: init_db.sh  init_redis.sh  utils.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: home.html  mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
