[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4"
config = "0.13"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = "0.16"
url = "2.5"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads 
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "2.9"
quickcheck = "~1.0"
quickcheck_macros = "~1.0"
rand = "0.8.5"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
